# gold-hbn-optimization

./: .gitignore  README.md  pyproject.toml  run.py
src/: calculators.py  ga_setup.py  geometry.py
